# FileIni

./: CMakeLists.txt  IniFile.cpp  IniFile.h  README.md  ciao.ini  main.cpp
test/: CMakeLists.txt  runAllTest.cpp  test.cpp
